--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@testing-library/user-event": "^7.1.2",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "react-scripts": "3.4.0",
+    "react-social-login-buttons": "^3.0.0",
     "react-stripe-elements": "^6.1.0",
     "styled-components": "^5.0.1"
   },
